B&L QA/objects/Product_Complaint_Product_Type__c.object
<CustomObject>
    <description>Holds values used to populate Product Type and Product Description fields in the Product Complaint (Case) object.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AUSTR</fullName>
                </value>
                <value>
                    <fullName>BELGM</fullName>
                </value>
                <value>
                    <fullName>BLGRC</fullName>
                </value>
                <value>
                    <fullName>BLUSA</fullName>
                </value>
                <value>
                    <fullName>CANAD</fullName>
                </value>
                <value>
                    <fullName>DMBLV</fullName>
                </value>
                <value>
                    <fullName>FRANC</fullName>
                </value>
                <value>
                    <fullName>ITACM</fullName>
                </value>
                <value>
                    <fullName>NETPR</fullName>
                </value>
                <value>
                    <fullName>NORDK</fullName>
                </value>
                <value>
                    <fullName>NORFI</fullName>
                </value>
                <value>
                    <fullName>NORNO</fullName>
                </value>
                <value>
                    <fullName>NORSE</fullName>
                </value>
                <value>
                    <fullName>POLND</fullName>
                </value>
                <value>
                    <fullName>PORTU</fullName>
                </value>
                <value>
                    <fullName>SPACM</fullName>
                </value>
                <value>
                    <fullName>SWICM</fullName>
                </value>
                <value>
                    <fullName>UNKGD</fullName>
                </value>
                <value>
                    <fullName>VCUCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cataract</fullName>
                </value>
                <value>
                    <fullName>IAVP</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>Ophthalmic</fullName>
                </value>
                <value>
                    <fullName>Refractive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Name__c</fullName>
        <description>Used to populate the Ajax-driven hidden field:  Product Complaint Product Line Item.Product Type.</description>
        <label>Global Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surgical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Name__c</fullName>
        <description>Used to populate the Ajax-driven picklist field:  Product Complaint Product Line Item.Product Description.  This is the name for the product in the BU.  For example, US uses “ReNu MPS”, but CA uses “Sensitive Eyes MPS”</description>
        <label>Local Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Site__c</fullName>
        <description>Holds the manufacturing site for this product</description>
        <label>Manufacturing Site</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Product Complaint Product Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Local_Name__c</columns>
        <columns>Global_Name__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Category__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Manufacturing_Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Product Complaint Product Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Complaint Product Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>